# neo-multi-tenant-auth

./: .gitignore  .roomodes  CLAUDE.md  README.md  deploy.dev.sh
NeoAdminApi/: .env.example  .gitignore  CLAUDE.md  Dockerfile  NEO_COMMONS_MIGRATION_STATUS.md  README.md  main.py  neoadminapi-neo-commons-integration-status.xml  pyproject.toml  pytest.ini  run.dev.sh  test_auth.py  test_auth_cache.py  test_db_connection.py
NeoAdminApi/.claude-flow/metrics/: performance.json  task-metrics.json
NeoAdminApi/development/analysis/: 20250822_041530_investigation_user_management_schema.xml  20250823_225706_investigation_auth_implementation.xml
NeoAdminApi/docs/: KEYCLOAK_COMPLETION_PLAN_CORRECTED.md  KEYCLOAK_COMPLETION_PLAN_FINAL.md  NEO_COMMONS_MIGRATION_PLAN.xml  ONBOARDING_IMPLEMENTATION_PLAN.md  ONBOARDING_USER_TYPES.md  PHASE_4_1_AUTH_INFRASTRUCTURE_MIGRATION_PLAN.xml  api_test_results.md  middleware_architecture.md  permission_audit_report.md  regions_feature_improvements.md
NeoAdminApi/docs/archive/: NEO_COMMONS_ANALYSIS_SUMMARY.md  NEO_COMMONS_MIGRATION_PLAN.xml
NeoAdminApi/docs/reviews/claude/: 160825-auth-review.md
NeoAdminApi/docs/reviews/final/: 160825-auth-migration-tasks.xml
NeoAdminApi/docs/reviews/gemini/: 160825-auth-review.md  auth_service_analysis.md
NeoAdminApi/docs/reviews/gpt5/: 160825-auth-review.md
NeoAdminApi/docs/reviews/o4-mini/: 160825-auth-review.md
NeoAdminApi/docs/reviews/opus4/: 160825-auth-review.md
NeoAdminApi/src/: app.py  main.py
NeoAdminApi/src/common/: __init__.py  dependencies.py  endpoints.py  exception_handlers.py  openapi_config.py
NeoAdminApi/src/common/cache/: client.py
NeoAdminApi/src/common/config/: __init__.py  provider.py  settings.py
NeoAdminApi/src/common/database/: connection.py  utils.py
NeoAdminApi/src/common/exceptions/: __init__.py  base.py  domain.py  service.py
NeoAdminApi/src/common/middleware/: __init__.py  config.py  logging.py  security.py  timing.py
NeoAdminApi/src/common/models/: __init__.py  base.py  pagination.py
NeoAdminApi/src/common/repositories/: base.py
NeoAdminApi/src/common/routers/: base.py
NeoAdminApi/src/common/services/: __init__.py  base.py
NeoAdminApi/src/common/utils/: __init__.py  datetime.py  encryption.py  metadata.py  uuid.py
NeoAdminApi/src/features/: __init__.py
NeoAdminApi/src/features/auth/: __init__.py  dependencies.py  dependencies_neo.py
NeoAdminApi/src/features/events/: __init__.py  dependencies.py  models.py  services.py
NeoAdminApi/src/features/organizations/: README.md  __init__.py
NeoAdminApi/src/features/reference_data/: __init__.py  dependencies.py
NeoAdminApi/src/features/system/: __init__.py
NeoAdminApi/src/features/tenants/: __init__.py
NeoAdminApi/src/integrations/keycloak/: async_client.py  token_manager.py
NeoAdminApi/tests/: __init__.py  conftest.py
NeoAdminApi/tests/features/: __init__.py
NeoAdminApi/tests/features/auth/: __init__.py
NeoAdminApi/tests/features/events/: test_event_action_apis.py
NeoAdminApi/tests/features/files/: __init__.py  test_file_upload.py  test_file_upload_database_integration.py  test_file_upload_simple.py
NeoAdminApi/tests/features/organizations/: __init__.py  run_all_tests.sh  test_admin_api.sh  test_organizations_api.sh
neo-commons/: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN_ACTIONS.md  DEVELOPMENT_PLAN_EVENTS.md  KEYCLOAK_ASYNC_MIGRATION.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_async_keycloak.py
neo-commons/.coordination/neo-chain/: COORDINATION_PROTOCOL.md
neo-commons/development/analysis/: 20250824_192625_investigation_auth_router_patterns.xml  20250824_193733_investigation_neoadminapi_structure.xml
neo-commons/development/reviews/neo-commons/: platform-cache-review.xml
neo-commons/docs/: CONFIGURATION_GUIDE.md
neo-commons/examples/: FastAPI_Configuration_Guide.md  complete_auth_integration.py  fastapi_usage_examples.py
neo-commons/examples/configuration/: CONFIGURABLE_HTTP_MAPPING.md  README.md  example_http_config.py  example_protocol_implementations.py  protocol_factory_examples.py  protocol_integration_example.py
neo-commons/examples/monitoring/: __init__.py  database_persistence_example.py  performance_example.py
neo-commons/src/neo_commons/: __init__.py  __version__.py  protocols.py  py.typed
neo-commons/src/neo_commons/api/: __init__.py  endpoints.py  exception_handlers.py  openapi.py  openapi_config.py  router_factories.py  routers.py  schema_enhancers.py  specialized_routers.py  tag_providers.py
neo-commons/src/neo_commons/auth/: __init__.py  exceptions.py  manager.py  protocols.py  rate_limiting.py
neo-commons/src/neo_commons/cache/: __init__.py  client.py  redis_operations.py
neo-commons/src/neo_commons/config/: __init__.py  base.py  constants.py  logging_config.py  manager.py  protocols.py
neo-commons/src/neo_commons/core/: __init__.py
neo-commons/src/neo_commons/database/: __init__.py  connection.py  utils.py
neo-commons/src/neo_commons/domain/: __init__.py
neo-commons/src/neo_commons/exceptions/: __init__.py  base.py  domain.py  service.py
neo-commons/src/neo_commons/features/: __init__.py
neo-commons/src/neo_commons/infrastructure/: __init__.py
neo-commons/src/neo_commons/integrations/: __init__.py
neo-commons/src/neo_commons/middleware/: __init__.py  config.py  logging.py  request_context.py  security.py  timing.py  unified_context.py
neo-commons/src/neo_commons/models/: __init__.py  base.py  pagination.py  protocols.py
neo-commons/src/neo_commons/platform/: __init__.py
neo-commons/src/neo_commons/repositories/: __init__.py  (+2 more)
neo-commons/tests/: __init__.py  conftest.py
neo-commons/tests/features/: __init__.py
neo-commons/tests/integration/: test_database_persistence.py  test_event_action_database_integration.py  test_event_action_simple_db.py  test_event_action_workflow.py  test_real_event_action_workflow.py  test_show_database_data.py
neo-commons/tests/unit/: test_event_action_compatibility.py
neo-commons/tests/workflows/: test_simple_event_action_flow.py
(+1625 files in other folders)
